<resources>
    <string name="app_name">KotlinBox</string>
    <string name="str_title">Chord Search 2</string>
    <string name="str_reset">×</string>
    <string name="str_minor">minor</string>
    <string name="str_sharp">＃</string>
    <string name="str_flat">♭</string>
    <string name="str_c">C</string>
    <string name="str_d">D</string>
    <string name="str_e">E</string>
    <string name="str_f">F</string>
    <string name="str_g">G</string>
    <string name="str_a">A</string>
    <string name="str_b">B</string>
    <string name="str_7">7</string>
    <string name="str_maj7">M7</string>
    <string name="str_6">6</string>
    <string name="str_harfdim">φ</string>
    <string name="str_dim">o7</string>
    <string name="str_dim_maj7">oM7</string>
    <string name="str_aug">aug7</string>
    <string name="str_aug_maj7">augM7</string>
    <string name="str_7sus4">7sus4</string>
    <string name="str_flat5">-5</string>
    <string name="str_sharp5">+5</string>
    <string name="str_9">(9)</string>
    <string name="str_flat9">(b9)</string>
    <string name="str_sharp9">(#9)</string>
    <string name="str_11">(11)</string>
    <string name="str_sharp11">(#11)</string>
    <string name="str_13">(13)</string>
    <string name="str_flat13">(b13)</string>
</resources>
