<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jp.gr.java_conf.testa.kotlinbox.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="198dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:scaleType="center"
        android:src="@android:drawable/presence_offline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title" />

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="368dp"
        android:layout_height="50dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/str_title"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Title"
        android:textColor="@android:color/darker_gray"
        android:typeface="monospace"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:layout_editor_absoluteX="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/input_reset"
                    style="@style/AppTheme.Button"
                    android:text="@string/str_reset"
                    tools:layout_editor_absoluteX="69dp"
                    tools:layout_editor_absoluteY="342dp" />

                <Button
                    android:id="@+id/input_minor"
                    style="@style/AppTheme.Button"
                    android:text="@string/str_minor" />

                <Button
                    android:id="@+id/input_sharp"
                    style="@style/AppTheme.Button"
                    android:text="@string/str_sharp" />

                <Button
                    android:id="@+id/input_flat"
                    style="@style/AppTheme.Button"
                    android:text="@string/str_flat" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/input_c"
                    style="@style/AppTheme.Button"
                    android:text="@string/str_c"
                    tools:layout_editor_absoluteX="69dp"
                    tools:layout_editor_absoluteY="342dp" />

                <Button
                    android:id="@+id/input_d"
                    style="@style/AppTheme.Button"
                    android:text="@string/str_d" />

                <Button
                    android:id="@+id/input_e"
                    style="@style/AppTheme.Button"
                    android:text="@string/str_e" />

                <Button
                    android:id="@+id/input_f"
                    style="@style/AppTheme.Button"
                    android:text="@string/str_f" />

                <Button
                    android:id="@+id/input_g"
                    style="@style/AppTheme.Button"
                    android:text="@string/str_g" />

                <Button
                    android:id="@+id/input_a"
                    style="@style/AppTheme.Button"
                    android:text="@string/str_a" />

                <Button
                    android:id="@+id/input_b"
                    style="@style/AppTheme.Button"
                    android:text="@string/str_b" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/input_7"
                    style="@style/AppTheme.Button"
                    android:text="@string/str_7"
                    tools:layout_editor_absoluteX="69dp"
                    tools:layout_editor_absoluteY="342dp" />

                <Button
                    android:id="@+id/input_maj7"
                    style="@style/AppTheme.Button"
                    android:text="@string/str_maj7" />

                <Button
                    android:id="@+id/input_6"
                    style="@style/AppTheme.Button"
                    android:text="@string/str_6" />

                <Button
                    android:id="@+id/input_harfdim"
                    style="@style/AppTheme.Button"
                    android:text="@string/str_harfdim" />

                <Button
                    android:id="@+id/input_dim"
                    style="@style/AppTheme.Button"
                    android:text="@string/str_dim" />

                <Button
                    android:id="@+id/input_dim_maj7"
                    style="@style/AppTheme.Button"
                    android:text="oM7" />

                <Button
                    android:id="@+id/input_aug"
                    style="@style/AppTheme.Button"
                    android:text="@string/str_aug" />

                <Button
                    android:id="@+id/input_aug_maj7"
                    style="@style/AppTheme.Button"
                    android:text="@string/str_aug_maj7" />

                <Button
                    android:id="@+id/input_7sus4"
                    style="@style/AppTheme.Button"
                    android:text="@string/str_7sus4" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/input_flat5"
                    style="@style/AppTheme.Button"
                    android:text="@string/str_flat5"
                    tools:layout_editor_absoluteX="69dp"
                    tools:layout_editor_absoluteY="342dp" />

                <Button
                    android:id="@+id/input_sharp5"
                    style="@style/AppTheme.Button"
                    android:text="@string/str_sharp5" />

                <Button
                    android:id="@+id/input_9"
                    style="@style/AppTheme.Button"
                    android:text="@string/str_9" />

                <Button
                    android:id="@+id/input_flat9"
                    style="@style/AppTheme.Button"
                    android:text="@string/str_flat9" />

                <Button
                    android:id="@+id/input_sharp9"
                    style="@style/AppTheme.Button"
                    android:text="@string/str_sharp9" />

                <Button
                    android:id="@+id/input_11"
                    style="@style/AppTheme.Button"
                    android:text="@string/str_11" />

                <Button
                    android:id="@+id/input_sharp11"
                    style="@style/AppTheme.Button"
                    android:text="@string/str_sharp11" />

                <Button
                    android:id="@+id/input_13"
                    style="@style/AppTheme.Button"
                    android:text="@string/str_13" />

                <Button
                    android:id="@+id/input_flat13"
                    style="@style/AppTheme.Button"
                    android:text="@string/str_flat13" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
